[TASK] Fix layout issues due to upgrade bootstrap

--- a/src/sass/_menus.scss
+++ b/src/sass/_menus.scss
@@ -54,7 +54,7 @@
   }
   .logo {
     position: relative;
-    top: -1px;
+    top: -15px;
     left: 25px;
     margin-right: 39px;
     width: 35px;
