--- a/src/sass/_now-playing.scss
+++ b/src/sass/_now-playing.scss
@@ -221,6 +221,7 @@
   transition: all 0.1s linear;
   border-radius: 50%;
   height: 65px;
+  text-decoration: none !important;
 }
 #nowPlaying .icons button .glyph {
   display: block;
